--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "version": "0.0.1",
   "author": "Juan Cabrera",
   "devDependencies": {
-    "6to5ify": "^4.0.0",
-    "browserify": "^8.1.3",
+    "babelify": "^5.0.4",
+    "browserify": "^9.0.3",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-connect": "^2.0.6",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-slim": "0.0.13"
+    "gulp-ruby-sass": "^1.0.1",
+    "gulp-slim": "^0.1.0"
   }
 }
