--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-connect": "^2.0.6",
     "gulp-ruby-sass": "^1.0.1",
-    "gulp-slim": "^0.1.0"
+    "gulp-slim": "^0.1.0",
+    "gulp-uglify": "^1.1.0"
   }
 }
