--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-ruby-sass": "^1.0.5",
-    "gulp-slim": "^0.1.0",
-    "gulp-uglify": "^1.2.0"
+    "gulp-slim": "^0.1.0"
   }
 }
