--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "version": "0.0.1",
   "author": "Juan Cabrera",
   "devDependencies": {
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-connect": "^2.2.0",
-    "gulp-ruby-sass": "^1.0.5",
-    "gulp-slim": "^0.1.0"
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^6.4.0",
+    "browserify": "13.0.0",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-connect": "3.1.0",
+    "gulp-ruby-sass": "2.0.6",
+    "gulp-slim": "0.3.0"
   }
 }
